--- a/slotmachine.html
+++ b/slotmachine.html
@@ -1,6 +1,7 @@
 <head>
     <title>Slot Machine!</title>
     <meta charset="utf-8"</charset>
+    <link rel="stylesheet" href="https://unpkg.com/mocha/mocha.css" />
 </head>
 
 <body>       
