--- a/slotmachine.html
+++ b/slotmachine.html
@@ -1,27 +1,14 @@
 <head>
     <title>Slot Machine!</title>
-    <meta charset="utf-8"</charset>
-    <link rel="stylesheet" href="https://unpkg.com/mocha/mocha.css" />
+    <meta charset="utf-8"></charset>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>       
-    <div id="mocha"></div>
-    <script src="https://unpkg.com/chai/chai.js"></script>
-    <script src="https://unpkg.com/mocha/mocha.js"></script>
-
-    <script class="mocha-init">
-        mocha.setup('bdd');
-        mocha.checkLeaks();
-    </script>
-
-    <script src="slotmachine.js"></script>
-        
-    <script>
-        const expect = chai.expect
-    </script>
-    <script src="tests.js"></script>
-    <script class="mocha-exec">
-         mocha.run();
-    </script>
-
+    <div id="game-menu">
+        <div>
+            <h1>Open the console to see the game in action!</h1>
+            <script src="slotmachine.js"></script>
+        </div>
+    </div>
 </body>
