MVP is completed

--- a/slotmachinetests.html
+++ b/slotmachinetests.html
@@ -1,3 +1,5 @@
+
+
 <head>
     <title>Slot Machine Tests</title>
     <meta charset="utf-8"></charset>
@@ -13,20 +15,18 @@
             mocha.setup('bdd');
             mocha.checkLeaks();
         </script>
+
         <script>
                 const expect = chai.expect
         </script>
 
-        <script src="slotmachine.js"></script>
+        <script src="tests.js"> </script>
 
         <script>
-            //Tests
-
-
+            //File containing Mocha unit tests for Slot Machine
+       
         </script>
 
-
-        <script src="tests.js"></script>
         <script class="mocha-exec">
                  mocha.run();
         </script>
